scrollbar in modals fix

--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -50,14 +50,33 @@
 
   .modal-body {
     padding: 20px 40px;
-    padding-bottom: 60px;
+    margin-bottom: 30px;
     max-height: calc(100% - 100px);
     overflow-y: auto;
+
+    // For Chrome & Safari
+    &::-webkit-scrollbar {
+      width: 6px;
+      background-color: #E9E9E9;
+    }
+  
+    &::-webkit-scrollbar-thumb {
+      background: #D2D2D2;
+    }
+  
+    &::-webkit-scrollbar-track {
+      background: #E9E9E9;
+    }
+  
+    // Standard version (Firefox only for now)
+    scrollbar-color: #D2D2D2 #E9E9E9;
+    scrollbar-width: thin;
 
     @media screen and (max-width: 576px) {
       padding-left: 20px;
       padding-right: 20px;
     }
+    
   }
 
   .modal-header {
